--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,3 +1,3 @@
-<h1>Home#home</h1>
-<p>Find me in app/views/home/home.html.erb</p>
-<%= link_to "aaa", home_web_payment_path %>
+<h1>Veritrans Example</h1>
+<p><%= link_to "Web payment", home_web_payment_path %></p>
+<p><%= link_to "Drirect payment", new_payment_path %></p>
